<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:padding="20dp">
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/network_name"
            app:boxBackgroundMode="outline">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/network_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_marginTop="10dp"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="5"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/network_proto"
                app:boxBackgroundMode="outline"
                app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                    android:paddingStart="10dp"
                    android:paddingVertical="16dp"
                    android:text="sftp"
                    android:id="@+id/network_protocol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:clickable="true"
                    android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/network_host"
                app:boxBackgroundMode="outline">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/network_host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_marginTop="10dp"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="5"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/network_port"
                app:boxBackgroundMode="outline">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/network_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/network_path"
                app:boxBackgroundMode="outline">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/network_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_marginTop="10dp"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/network_username"
                app:boxBackgroundMode="outline">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/network_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/network_password"
                app:boxBackgroundMode="outline">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/network_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>