<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleCentered="false"
            app:titleTextColor="@color/purple"
            app:title="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/local_storage_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="14dp"
            android:text="@string/local_storage"
            android:textColor="@color/purple"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/local_storage_card"
            app:layout_constraintTop_toBottomOf="@+id/local_storage_label"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/local_storage_icon"
                    android:contentDescription="@string/local_storage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/round_storage_48">
            </ImageView>
            <TextView
                    app:layout_constraintStart_toEndOf="@+id/local_storage_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/local_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            </TextView>
            <TextView
                    android:id="@+id/local_storage_size"
                    app:layout_constraintStart_toEndOf="@+id/local_storage_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/network_tab"
            app:layout_constraintTop_toBottomOf="@+id/local_storage_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/network_storage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="14dp"
                android:text="@string/network_storage"
                android:textColor="@color/purple"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
                android:id="@+id/network_storage_add"
                android:contentDescription="@string/network_storage"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/round_add_24">
        </ImageButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/network_tab"/>

</androidx.constraintlayout.widget.ConstraintLayout>